# src/app.ts
@@ -11,6 +11,8 @@ import { fileURLToPath } from 'url';
 import authRoutes from './modules/auth/auth.routes.js';
 import reqRoutes from './modules/requerimientos/requerimiento.routes.js';
 import asigRoutes from './modules/asignaciones/asignacion.routes.js';
+import sedeRoutes from './modules/sedes/sede.routes.js';
+import personaRoutes from './modules/personas/persona.routes.js';
 
 // Configuración de __dirname para ES Modules
 const __filename = fileURLToPath(import.meta.url);
@@ -23,6 +25,10 @@ const PORT = process.env.PORT || 3000;
 app.use(cors({ origin: 'http://localhost:5173', credentials: true }));
 app.use(express.json());
 
+// Servir Favicon para pestañas directas (PDFs)
+app.use('/favicon.ico', express.static(path.join(__dirname, '../public/favicon.ico')));
+app.use('/public', express.static(path.join(__dirname, '../public')));
+
 // 2. Swagger
 const swaggerPath = path.join(__dirname, '../swagger.yaml');
 // Pequeña protección por si el archivo no existe
@@ -34,17 +40,21 @@ try {
 }
 
 // 3. Rutas de API
+app.use('/uploads', express.static(path.join(__dirname, '../uploads')));
+
 app.use('/api/auth', authRoutes);
 app.use('/api/requerimientos', reqRoutes);
 app.use('/api/asignaciones', asigRoutes);
+app.use('/api/sedes', sedeRoutes);
+app.use('/api/personas', personaRoutes);
 
 // 4. Manejador de Errores Global (Siempre al final)
 // Esto captura errores de sintaxis JSON o promesas rotas no capturadas
 app.use((err: any, req: Request, res: Response, next: NextFunction) => {
   console.error('🔥 Error no controlado:', err);
-  res.status(500).json({ 
-    error: 'Error interno del servidor', 
-    message: err.message || 'Algo salió mal' 
+  res.status(500).json({
+    error: 'Error interno del servidor',
+    message: err.message || 'Algo salió mal'
   });
 });
 
